--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import './assets/styles/variables.scss';
+// @import './assets/styles/variables.scss';
 
-body {
-	background-color: $white;
-}
+// body {
+// 	background-color: $white;
+// }
