--- a/src/components/Navigation/Nav.scss
+++ b/src/components/Navigation/Nav.scss
@@ -1,5 +1,9 @@
 @import '../../assets/styles/variables.scss';
 
+.disable {
+	display: none;
+}
+
 .nav {
 	width: 90%;
 	margin: 0 auto;
@@ -12,11 +16,7 @@
 
 .nav__menu {
 	flex-basis: 60%;
-}
-
-.nav__menu-container {
-	display: flex;
-	align-items: center;
+	position: relative;
 }
 
 .nav__menu-btn {
@@ -25,11 +25,29 @@
 	background-color: transparent;
 }
 
+.list-container {
+	background-color: #fff;
+	height: 100vh;
+	width: 50vw;
+}
+
 .nav__list {
 	list-style: none;
 	font-size: 1.125rem;
 	font-weight: 700;
-	display: none;
+}
+
+.nav__mobile-menu {
+	position: absolute;
+	top: -20px;
+	left: -15%;
+	z-index: 100;
+}
+
+.close-menu-btn {
+	background-color: transparent;
+	border: none;
+	margin: 1rem 0 1rem 2rem;
 }
 
 .nav__item {
