--- a/src/components/Navigation/CartOverlay.scss
+++ b/src/components/Navigation/CartOverlay.scss
@@ -1,14 +1,16 @@
 @import '../../assets/styles/variables.scss';
 
-.overlay {
+.cart__modal {
 	display: none;
 	position: absolute;
-	top: 120%;
+	top: 15%;
+	left: 2.5%;
 	z-index: 100;
 	background: #fff;
 	height: 280px;
-	width: 100%;
+	width: 95%;
 	border-radius: 15px;
+	box-shadow: 10px 10px 35px -5px rgba(0, 0, 0, 0.5);
 }
 
 .overlay-active {
