--- a/src/components/Navigation/SidebarMenu.scss
+++ b/src/components/Navigation/SidebarMenu.scss
@@ -1,13 +1,19 @@
 @import '../../assets/styles/variables.scss';
 
-.nav__menu-mobile {
-	position: absolute;
+.nav-container {
+	position: fixed;
+	z-index: 100;
+	width: 100%;
 	top: 0;
-	left: 0;
+	display: none;
+}
+
+.nav__menu-mobile {
+	position: relative;
 	z-index: 100;
 	background-color: #fff;
 	height: 100vh;
-	width: 65vw;
+	width: 65%;
 }
 
 .nav__list-mobile {
@@ -32,4 +38,17 @@
 .nav__link {
 	color: $dark;
 	text-decoration: none;
+}
+
+.backdrop {
+	background-color: rgba(0, 0, 0, 0.5);
+	position: absolute;
+	top: 0;
+	z-index: 50;
+	height: 100vh;
+	width: 100%;
+}
+
+.active {
+	display: block;
 }
