--- a/src/components/Navigation/Nav.scss
+++ b/src/components/Navigation/Nav.scss
@@ -11,6 +11,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: relative;
 }
 
 .nav__menu {
@@ -33,6 +34,12 @@
 		width: 20%;
 		max-width: 33%;
 	}
+}
+
+.cart-btn {
+	border: none;
+	background-color: transparent;
+	padding: 0;
 }
 
 .cart-icon {
