--- a/src/components/Navigation/Nav.scss
+++ b/src/components/Navigation/Nav.scss
@@ -33,6 +33,7 @@
 	img {
 		width: 20%;
 		max-width: 33%;
+		margin-left: 1rem;
 	}
 }
 
@@ -40,11 +41,11 @@
 	border: none;
 	background-color: transparent;
 	padding: 0;
+	position: relative;
 }
 
 .cart-icon {
 	color: $light;
-	margin: 0 1.25rem;
 }
 
 .cart-active {
