--- a/src/components/Navigation/NavList.scss
+++ b/src/components/Navigation/NavList.scss
@@ -17,7 +17,7 @@
 	text-decoration: none;
 }
 
-@media (min-width: $desktop) {
+@media (min-width: $tablet) {
 	.nav__list {
 		display: flex;
 		align-items: center;
