--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -5,6 +5,7 @@
 	border: none;
 	border-radius: 10px;
 	display: block;
+	max-width: 350px;
 	width: 100%;
 	padding: 1rem 1.25rem;
 	font-weight: 700;
