-Desktop design 95% there -Added a modal for images

--- a/src/components/Navigation/SidebarMenu.scss
+++ b/src/components/Navigation/SidebarMenu.scss
@@ -23,14 +23,14 @@
 	padding: 0;
 }
 
-.backdrop {
-	background-color: rgba(0, 0, 0, 0.5);
-	position: absolute;
-	top: 0;
-	z-index: 50;
-	height: 100vh;
-	width: 100%;
-}
+// .backdrop {
+// 	background-color: rgba(0, 0, 0, 0.5);
+// 	position: absolute;
+// 	top: 0;
+// 	z-index: 50;
+// 	height: 100vh;
+// 	width: 100%;
+// }
 
 .active {
 	display: block;
