--- a/src/components/Navigation/NavList.scss
+++ b/src/components/Navigation/NavList.scss
@@ -30,5 +30,24 @@
 
 	.nav__link {
 		color: $light;
+		position: relative;
+		&::after {
+			content: '';
+			position: absolute;
+			right: 0;
+			bottom: -50%;
+			width: 100%;
+			height: 2px;
+			background-color: $primary;
+			opacity: 0;
+			transition: all 250ms;
+		}
+		&:hover {
+			color: black;
+		}
+		&:hover::after {
+			transform: translateY(250%);
+			opacity: 1;
+		}
 	}
 }
